--- a/16.Modules and Babel and DOM Exercises/06.modular dom/index.html
+++ b/16.Modules and Babel and DOM Exercises/06.modular dom/index.html
@@ -94,9 +94,7 @@
     <main id="content">
     </main>
 
-    <script src="./app.js">
-        
-    </script>
+    <script src="./app.js"></script>
 </div>
 </body>
 </html>
