--- a/21.Final Exam/01.Add-remove-towns/index.html
+++ b/21.Final Exam/01.Add-remove-towns/index.html
@@ -23,8 +23,6 @@
     <button id="btnAdd">Add</button>
 </div>
 
-<script src="./add-delete-towns.js">
-
-</script>
+<script src="./add-delete-towns.js"></script>
 </body>
 </html>
