--- a/21.Final Exam/04.Cards/index.htm
+++ b/21.Final Exam/04.Cards/index.htm
@@ -15,8 +15,6 @@
 <body>
 <div id="main"></div>
 
-<script src="./card-builder.js">
-
-</script>
+<script src="./card-builder.js"></script>
 </body>
 </html>
